--- a/game.html
+++ b/game.html
@@ -8,10 +8,10 @@
         <link rel="stylesheet" href="style.css">
         <script type="text/javascript" src="main.js"></script>
     </head>
-    <body>
-        <h4 id="player1name"></h4>
-        <h4 id="player2name"></h4>
+    <body onmouseover="load()">
         <div class="container">
+            <h3 id="player1name"><span id="player1score"></span></h3>
+            <h3 id="player2name"><span id="player2score"></span></h3>
             <center>
                 <h1 class="title">The Math Quiz Game</h1>
                 <h4 style="color: white;">Question turn: <span id="question_turn"></span></h4>
@@ -23,11 +23,11 @@
                 <br>
                 <div>
                     <label style="color: black;">Number 1:</label>
-                    <input placeholder="Enter number 1" id="number_1" type="text" class="form-control">
+                    <input placeholder="Enter number 1" id="number_1" type="number" class="form-control">
                 </div>
                 <div>
                     <label style="color: black;">Number 2:</label>
-                    <input placeholder="Enter number 2" id="number_2" type="text" class="form-control">
+                    <input placeholder="Enter number 2" id="number_2" type="number" class="form-control">
                 </div>
                 <br>
                 <br>
